# ProjectEuler

./: .gitignore  BinaryTree.py  README.md  flake.nix  problem05.py  problem09.py  problem10.py  problem103.py  problem105.py  problem106.py  problem108.py  problem116.py  problem117.py  problem12.py  problem124.py  problem128.py  problem131.py  problem132.py  problem139.py  problem14.py  problem142.py  problem145.py  problem147.py  problem15.py  problem150.py  problem152.py  problem153.py  problem158.py  problem167.py  problem169.py  problem171.py  problem172.py  problem173.py  problem174.py  problem178.py  problem179.py  problem18.py  problem182.py  problem186.py  problem187.py  (+166 more)
problems/0/: problem001.py  problem002.py  problem003.py  problem004.py  problem008.py  problem013.py  problem016.py  problem017.py  problem020.py  problem021.py  problem022.py  problem024.py  problem025.py  problem026.py  problem027.py  problem028.py  problem029.py  problem030.py  problem032.py  problem033.py  problem038.py  problem040.py  problem041.py  problem042.py  problem043.py  problem044.py  problem046.py  problem047.py  problem048.py  problem049.py  problem051.py  problem052.py  problem053.py  problem054.py  problem055.py  problem056.py  problem057.py  problem058.py  problem059.py  problem061.py  (+32 more)
problems/001-099/problem_002/ocaml/: dune-project
problems/001-099/problem_002/ocaml/lib/: solution.ml
problems/001-099/problem_002/ocaml/test/: dune
problems/1/: problem100.py  problem101.py  problem102.py  problem104.py  problem107.py  problem109.py  problem110.py  (+59 more)
scripts/: setup.exs
(+1252 files in other folders)
