(lang dune 3.15)

(name solution)

(generate_opam_files true)

(source
 (github JustinKnueppel/ProjectEuler))

(authors "Justin Knueppel <justinknueppel@gmail.com>")

(maintainers "Justin Knueppel <justinknueppel@gmail.com>")

(license MIT)

(documentation https://github.com/JustinKnueppel/ProjectEuler)

(package
 (name solution)
 (synopsis "Solution to project Euler problem")
 (description "Solution to project Euler problem")
 (depends ocaml)
 (tags
  ("ocaml" "project Euler")))
